[gd_scene load_steps=15 format=2]

[ext_resource path="res://assets/art/panel_squares.png" type="Texture" id=1]
[ext_resource path="res://assets/art/panel button.png" type="Texture" id=2]
[ext_resource path="res://assets/art/panel_close.png" type="Texture" id=3]
[ext_resource path="res://scripts/Panel.gd" type="Script" id=4]
[ext_resource path="res://assets/sounds/doorOpen_002.ogg" type="AudioStream" id=5]
[ext_resource path="res://assets/sounds/doorClose_002.ogg" type="AudioStream" id=6]
[ext_resource path="res://assets/sounds/forceField_003.ogg" type="AudioStream" id=7]
[ext_resource path="res://assets/sounds/forceField_001.ogg" type="AudioStream" id=8]
[ext_resource path="res://assets/sounds/forceField_002.ogg" type="AudioStream" id=9]
[ext_resource path="res://assets/sounds/laserRetro_001.ogg" type="AudioStream" id=10]
[ext_resource path="res://assets/sounds/laserRetro_004.ogg" type="AudioStream" id=11]
[ext_resource path="res://assets/sounds/laserRetro_002.ogg" type="AudioStream" id=12]

[sub_resource type="Animation" id=1]
resource_name = "push_button"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 1, 0 ]
}

[sub_resource type="Animation" id=2]
length = 0.4
step = 0.07
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.07, 0.14, 0.21, 0.28, 0.35 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5 ]
}

[node name="panel" type="Node2D"]
position = Vector2( 241, 416 )
script = ExtResource( 4 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 17.0
margin_top = 15.0
margin_right = 204.0
margin_bottom = 208.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridContainer" type="GridContainer" parent="VBoxContainer"]
margin_right = 204.0
margin_bottom = 204.0
rect_min_size = Vector2( 204, 204 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/vseparation = 6
custom_constants/hseparation = 6
columns = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureButton1" type="TextureButton" parent="VBoxContainer/GridContainer"]
margin_right = 64.0
margin_bottom = 64.0
size_flags_horizontal = 3
size_flags_vertical = 3
expand = true

[node name="Sprite" type="Sprite" parent="VBoxContainer/GridContainer/TextureButton1"]
position = Vector2( 0, 2 )
texture = ExtResource( 1 )
centered = false
hframes = 4

[node name="TextureButton2" type="TextureButton" parent="VBoxContainer/GridContainer"]
margin_left = 70.0
margin_right = 134.0
margin_bottom = 64.0
size_flags_horizontal = 3
size_flags_vertical = 3
expand = true

[node name="Sprite" type="Sprite" parent="VBoxContainer/GridContainer/TextureButton2"]
position = Vector2( 0, 2 )
texture = ExtResource( 1 )
centered = false
hframes = 4

[node name="TextureButton3" type="TextureButton" parent="VBoxContainer/GridContainer"]
margin_left = 140.0
margin_right = 204.0
margin_bottom = 64.0
size_flags_horizontal = 3
size_flags_vertical = 3
expand = true

[node name="Sprite" type="Sprite" parent="VBoxContainer/GridContainer/TextureButton3"]
position = Vector2( 0, 2 )
texture = ExtResource( 1 )
centered = false
hframes = 4

[node name="TextureButton4" type="TextureButton" parent="VBoxContainer/GridContainer"]
margin_top = 70.0
margin_right = 64.0
margin_bottom = 134.0
size_flags_horizontal = 3
size_flags_vertical = 3
expand = true

[node name="Sprite" type="Sprite" parent="VBoxContainer/GridContainer/TextureButton4"]
position = Vector2( 0, 2 )
texture = ExtResource( 1 )
centered = false
hframes = 4

[node name="TextureButton5" type="TextureButton" parent="VBoxContainer/GridContainer"]
margin_left = 70.0
margin_top = 70.0
margin_right = 134.0
margin_bottom = 134.0
size_flags_horizontal = 3
size_flags_vertical = 3
expand = true

[node name="Sprite" type="Sprite" parent="VBoxContainer/GridContainer/TextureButton5"]
position = Vector2( 0, 2 )
texture = ExtResource( 1 )
centered = false
hframes = 4

[node name="TextureButton6" type="TextureButton" parent="VBoxContainer/GridContainer"]
margin_left = 140.0
margin_top = 70.0
margin_right = 204.0
margin_bottom = 134.0
size_flags_horizontal = 3
size_flags_vertical = 3
expand = true

[node name="Sprite" type="Sprite" parent="VBoxContainer/GridContainer/TextureButton6"]
position = Vector2( 0, 2 )
texture = ExtResource( 1 )
centered = false
hframes = 4

[node name="TextureButton7" type="TextureButton" parent="VBoxContainer/GridContainer"]
margin_top = 140.0
margin_right = 64.0
margin_bottom = 204.0
size_flags_horizontal = 3
size_flags_vertical = 3
expand = true

[node name="Sprite" type="Sprite" parent="VBoxContainer/GridContainer/TextureButton7"]
position = Vector2( 0, 2 )
texture = ExtResource( 1 )
centered = false
hframes = 4

[node name="TextureButton8" type="TextureButton" parent="VBoxContainer/GridContainer"]
margin_left = 70.0
margin_top = 140.0
margin_right = 134.0
margin_bottom = 204.0
size_flags_horizontal = 3
size_flags_vertical = 3
expand = true

[node name="Sprite" type="Sprite" parent="VBoxContainer/GridContainer/TextureButton8"]
position = Vector2( 0, 2 )
texture = ExtResource( 1 )
centered = false
hframes = 4

[node name="TextureButton9" type="TextureButton" parent="VBoxContainer/GridContainer"]
margin_left = 140.0
margin_top = 140.0
margin_right = 204.0
margin_bottom = 204.0
size_flags_horizontal = 3
size_flags_vertical = 3
expand = true

[node name="Sprite" type="Sprite" parent="VBoxContainer/GridContainer/TextureButton9"]
position = Vector2( 0, 2 )
texture = ExtResource( 1 )
centered = false
hframes = 4

[node name="red button" type="TextureButton" parent="VBoxContainer"]
margin_left = 77.0
margin_top = 210.0
margin_right = 127.0
margin_bottom = 260.0
rect_min_size = Vector2( 50, 50 )
size_flags_horizontal = 4
size_flags_vertical = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="VBoxContainer/red button"]
position = Vector2( 0, 0.594604 )
scale = Vector2( 1, 1.01149 )
texture = ExtResource( 2 )
centered = false
hframes = 2

[node name="fireCooldown" type="Timer" parent="VBoxContainer/red button"]

[node name="AnimationPlayer" type="AnimationPlayer" parent="VBoxContainer/red button"]
anims/push_button = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/open = SubResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 3 )
centered = false
hframes = 6

[node name="TimerOpen" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[node name="door open" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -24.0

[node name="door close" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -24.0

[node name="button pushed 1" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
volume_db = -18.0

[node name="fire sound 1" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )
volume_db = -18.0

[node name="fire sound 2" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 12 )
volume_db = -18.0

[node name="fire sound 3" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )
volume_db = -18.0

[node name="button pushed 2" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
volume_db = -18.0

[node name="button pushed 3" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = -18.0

[connection signal="pressed" from="VBoxContainer/red button" to="." method="_on_red_button_pressed"]
[connection signal="timeout" from="TimerOpen" to="." method="_on_Timer_timeout"]
